--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,4 +1,5 @@
 .header {
+  position: relative;
   padding: 1rem;
   display: flex;
   align-items: center;
@@ -31,4 +32,57 @@
 .nav ul li a:hover {
   text-decoration: underline;
   color: #111;
+}
+
+.buttonMenu {
+  background-color: #333;
+  width: 40px;
+  height: 40px;
+  border-radius: .4rem .4rem 0 0;
+  position: absolute;
+  right: 13px;
+  border: transparent;
+}
+
+.buttonMenu::before {
+  content: "";
+  width: 25px;
+  height: 3px;
+  background: white;
+  display: inline-block;
+  box-shadow: 0 6px 0px .2px white, 0 -6px 0px .2px white;
+}
+
+.navMobile ul {
+  background-color: white;
+  padding: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  position: absolute;
+  right: 13px;
+  top: 67px;
+  border-radius: .4rem 0 .4rem .4rem;
+  box-shadow: 0px 4px 8px 1px #333;
+  z-index: 1000;
+}
+
+.navMobile.inativo ul {
+  opacity: 0;
+  transition: .5s ;
+}
+
+.navMobile.active ul {
+  opacity: 1;
+  transition: .5s;
+}
+
+.navMobile ul li a {
+  vertical-align: middle;
+  color: #333;
+}
+
+.navMobile ul li img {
+  width: 30px;
+  vertical-align: middle;
 }
