--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -16,7 +16,6 @@
 .frontEnd {
   background-color: white;
   width: 400px;
-  height: 400px;
   border-radius: .4rem;
   box-shadow: 0px 0px 8px 1px #333;
   padding: 1.5rem 2rem;
@@ -65,4 +64,17 @@
   height: 1px;
   margin-top: .5rem;
   background-color: #fb1;
+}
+
+@media (max-width:478px) {
+  .frontEnd {
+    width: 100%;
+  }
+}
+
+@media (max-width:400px) {
+  .skillsList li {
+    grid-column: 1 / -1;
+    justify-self: center;
+  } 
 }
