--- a/src/components/Portfolio/Slide.module.css
+++ b/src/components/Portfolio/Slide.module.css
@@ -1,6 +1,6 @@
 .container {
   overflow: hidden;
-}
+} 
 
 .content {
   display: flex;
@@ -31,4 +31,10 @@
   padding: 1rem 2rem;
   font-size: 2rem;
   font-weight: bold;
+}
+
+@media (max-width:768px) {
+  .content {
+    width: 100%;
+  }
 }
