--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -12,6 +12,8 @@
   display: flex;
   gap: 4rem;
   justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 .methodContact ul li {
