--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -22,6 +22,7 @@
 .links {
   margin-top: 1rem;
   display: flex;
+  flex-wrap: wrap;
   gap: 2rem;
   justify-content: center;
 }
@@ -38,4 +39,8 @@
 .social img{
   width: 45px;
   height: 45px;
+}
+
+.footer > p {
+  margin-top: 1rem;
 }
