--- a/src/components/Education/Education.module.css
+++ b/src/components/Education/Education.module.css
@@ -2,6 +2,7 @@
   width: 500px;
   background-color: white;
   height: 800px;
+  margin-top: 7rem;
   margin-bottom: 2rem;
   border-radius: .4rem;
   box-shadow: 0px 0px 8px 1px #333;
