--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,4 +1,5 @@
 .header {
+  z-index: 1000;
   position: relative;
   padding: 1rem;
   display: flex;
@@ -14,6 +15,7 @@
 
 .nav ul {
   display: flex;
+  flex-wrap: wrap;
   gap: 24px;
 }
 
@@ -64,7 +66,6 @@
   top: 67px;
   border-radius: .4rem 0 .4rem .4rem;
   box-shadow: 0px 4px 8px 1px #333;
-  z-index: 1000;
 }
 
 .navMobile.inativo ul {
