--- a/src/components/Portfolio/Slide.module.css
+++ b/src/components/Portfolio/Slide.module.css
@@ -7,6 +7,13 @@
   transition: transform .3s ease;
 }
 
+.content h4 {
+  font-size: 1.5rem;
+  color: #333;
+  padding: 1rem 0;
+  text-decoration: underline;
+}
+
 .item {
   flex-shrink: 0;
   width: 80%;
