--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -44,6 +44,7 @@
   position: absolute;
   right: 13px;
   border: transparent;
+  cursor: pointer;
 }
 
 .buttonMenu::before {
@@ -70,12 +71,14 @@
 
 .navMobile.inativo ul {
   opacity: 0;
+  visibility: hidden;
   transition: .5s ;
 }
 
 .navMobile.active ul {
   opacity: 1;
   transition: .5s;
+  visibility: visible;
 }
 
 .navMobile ul li a {
