--- a/src/components/Portfolio/Slide.module.css
+++ b/src/components/Portfolio/Slide.module.css
@@ -4,14 +4,14 @@
 
 .content {
   display: flex;
+  align-items: flex-end;
   transition: transform .3s ease;
 }
 
 .content h4 {
-  font-size: 1.5rem;
+  font-size: 1.125rem;
   color: #333;
-  padding: 1rem 0;
-  text-decoration: underline; 
+  padding: 1rem 0; 
 }
 
 .item {
@@ -20,7 +20,7 @@
   margin: 0 10%;
   padding: 1rem 0;
   border-radius: .4rem;
-  text-align: center;
+  text-align: center; 
 }
 
 .nav {
