--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -9,13 +9,7 @@
   grid-column: 1 / -1;
   text-align: center;
   color: #333;
-}
-
-.about > p {
-  grid-column: 1 / -1;
-  text-align: center;
-  margin-bottom: 4rem;
-  color: #555;
+  margin-bottom: 1.5rem;
 }
 
 .about img {
@@ -24,11 +18,12 @@
 
 .content p {
   color: #555;
-  margin-bottom: 1rem;
+  font-size: 1.1rem;
 }
 
-.content button a {
+.curriculo button {
   color: white;
+  margin-top: 2.5rem;
 } 
 
 @media (max-width:768px) {
