--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -16,10 +16,11 @@
 
 .frontEnd {
   background-color: white;
-  width: 400px;
+  max-width: 700px;
+  width: 100%;
   border-radius: .4rem;
   box-shadow: 0px 0px 8px 1px #333;
-  padding: 1.5rem 2rem;
+  padding: 1.5rem 1rem;
   margin: 0 auto;
   margin-top: 2rem;
 }
@@ -32,39 +33,31 @@
 .skillsList {
   margin-top: 2rem;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 1rem;
+  grid-template-columns: 1fr 1fr 1fr;
+  justify-content: center;
+  padding-right: 1rem;
+  align-items: center;
+  gap: 1.5rem;
 }
 
 .skillsList p {
   color: #333;
-  font-size: 1.125rem;
+  font-size: 1.2rem;
+  text-align: center;
+  margin-bottom: .3rem;
 }
 
-.skillsList li p::before {
-  content: "";
-  background: url("../../imgs/Skills/approve.svg");
-  display: inline-block;
-  margin-right: .3rem;
-  width: 30px;
-  height: 30px;
-  vertical-align: middle;
-}
-
-.skillsList span {
-  margin-left: 2rem;
-  position: relative;
-  top: -7px;
-  color: #555;
-}
-
-.skillsList span::after {
-  content: "";
+.skillsList li img {
+  width: 80px;
+  margin: 0 auto;
   display: block;
-  width: 140px;
-  height: 1px;
-  margin-top: .5rem;
-  background-color: #fb1;
+  margin-bottom: 1rem;
+}
+
+@media (max-width: 520px) {
+  .skillsList {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media (max-width:478px) {
