--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -15,12 +15,11 @@
 
 
 .frontEnd {
-  background-color: white;
+  background: transparent;
   max-width: 700px;
   width: 100%;
   border-radius: .4rem;
-  box-shadow: 0px 0px 8px 1px #333;
-  padding: 1.5rem 1rem;
+  padding: 1rem 1rem;
   margin: 0 auto;
   margin-top: 2rem;
 }
@@ -32,12 +31,12 @@
 
 .skillsList {
   margin-top: 2rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   padding-right: 1rem;
   align-items: center;
-  gap: 1.5rem;
+  gap: 3rem;
 }
 
 .skillsList p {
