--- a/src/components/Portfolio/Portfolio.module.css
+++ b/src/components/Portfolio/Portfolio.module.css
@@ -10,9 +10,59 @@
   text-align: center;
 }
 
-.portfolio img {
+.portfolioLista {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  margin-top: 4rem;
+  justify-content: center;
+}
+
+.portfolioLista li {
+  box-shadow: 0 0 3px #333;
+  border-radius: 1rem;
+  padding: 1rem;
+  max-width: 330px;
+  margin-bottom: 3rem;
+}
+
+.portfolioLista img {
   width: 100%;
-  height: 600px;
+  height: 250px;
+}
+
+.portfolioTexto {
+  margin-bottom: .5rem;
+}
+
+.portfolioTechs {
+  margin-bottom: 1rem;
+  font-weight: 600;
+}
+
+.techs {
+  width: 100%;
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.techs span img {
+  max-width: 40px;
+  height: 40px;
+}
+
+.portfolioLista div {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.portfolioLista a {
+  background-color: #333;
+  color: #fff;
+  border-radius: 1rem;
+  padding: .5rem 1rem;
+  display: inline-block;
 }
 
 @media (max-width:768px) {
