--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -39,18 +39,26 @@
   gap: 3rem;
 }
 
+.skillsList li {
+  border: 2px solid #333;
+  display: flex;
+  align-items: center;
+  padding: .5rem 1rem;
+  border-radius: .5rem;
+}
+
 .skillsList p {
   color: #333;
-  font-size: 1.2rem;
-  text-align: center;
-  margin-bottom: .3rem;
+  font-size: 1.1rem;
+  padding-left: .8rem;
+  font-weight: 600;
 }
 
 .skillsList li img {
-  width: 80px;
+  width: 60px;
   margin: 0 auto;
   display: block;
-  margin-bottom: 1rem;
+  margin-bottom: 0rem;
 }
 
 @media (max-width: 520px) {
