--- a/src/components/Portfolio/Portfolio.module.css
+++ b/src/components/Portfolio/Portfolio.module.css
@@ -26,9 +26,10 @@
   margin-bottom: 3rem;
 }
 
-.portfolioLista img {
+.portfolioLista li > img {
   width: 100%;
-  height: 250px;
+  height: 180px;
+  object-fit: cover;
 }
 
 .portfolioTexto {
@@ -48,7 +49,7 @@
 
 .techs span img {
   max-width: 40px;
-  height: 40px;
+  height: 35px;
 }
 
 .portfolioLista div {
