--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -14,6 +14,7 @@
   gap: 1rem;
   align-items: center;
   max-width: 70px;
+  padding: 1rem;
 }
 
 .content {
@@ -31,7 +32,7 @@
   width: 30px;
   height: 30px;
   position: relative;
-  left: 10px;  
+  left: 10px; 
 }
 
 .contentText .typeAnimation {
@@ -67,7 +68,7 @@
 }
 
 .contentText p {
-  color: #555;
+  color: #333;
   font-size: 1.125rem;
 }
 
