atualização da section hero

--- a/src/components/Geral/Button.module.css
+++ b/src/components/Geral/Button.module.css
@@ -4,7 +4,7 @@
   width: 150px;
   margin: 0 auto;
   border-radius: .4rem;
-  background-color: #333;
+  background-color: #B78300;
   color: white;
   font-size: 1.125rem;
   font-weight: bold;
