--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border-bottom: 2px solid #fb1;
+  border-bottom: 1px solid #ddd;
 }
 
 .logo {
