--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -65,14 +65,15 @@
     visibility: hidden;
     flex-direction: column;
     background-color: #fff;
-    width: 100%;
+    width: 300px;
+    box-shadow: 0px 0px 6px 0px #B78300;
+    border-radius: 100px 10px 10px 10px;
     align-items: center;
     gap: 24px;
     padding: 2rem;
-    box-shadow: 1px 1px 10px 5px #333;
     position: absolute;
     top: 95px;
-    right: 0;
+    right: 5px;
     opacity: 0;
   }
 
@@ -83,14 +84,11 @@
   }
 
   .nav ul li {
-    border-bottom: 1px solid #333;
-    width: 100%;
     text-align: center;
     padding-bottom: 1rem;
   }
 
   .nav ul li:first-child {
-    border-top: 1px solid #333;
     padding-top: 1rem;
   }
 
