--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -60,21 +60,24 @@
   margin-bottom: 0rem;
 }
 
-@media (max-width: 520px) {
-  .skillsList {
-    grid-template-columns: 1fr 1fr;
+@media (max-width: 678px) {
+  .skillsList li img {
+    width: 50px;
+    height: 50px;
   }
 }
 
-@media (max-width:478px) {
+@media (max-width:450px) {
+  .skillsList {
+    gap: 20px;
+  }
+  
+  .skillsList li img {
+    width: 40px;
+    height: 40px;
+  }
+  
   .frontEnd {
     width: 100%;
   }
-}
-
-@media (max-width:400px) {
-  .skillsList li {
-    grid-column: 1 / -1;
-    justify-self: center;
-  } 
 }
